# serializer version: 1
# name: test_devices[{('teslemetry', '123456')}]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': 'https://teslemetry.com/console',
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'teslemetry',
        '123456',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Tesla',
    'model': 'Powerwall 2, Tesla Backup Gateway 2',
    'model_id': None,
    'name': 'Energy Site',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '123456',
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_devices[{('teslemetry', 'LRW3F7EK4NC700000')}]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': 'https://teslemetry.com/console',
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'teslemetry',
        'LRW3F7EK4NC700000',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Tesla',
    'model': 'Model 3',
    'model_id': None,
    'name': 'Test',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': 'LRW3F7EK4NC700000',
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_devices[{('teslemetry', 'abd-123')}]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': 'https://teslemetry.com/console',
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'teslemetry',
        'abd-123',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Tesla',
    'model': 'Gen 3 Wall Connector',
    'model_id': None,
    'name': 'Wall Connector',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '123',
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': <ANY>,
  })
# ---
# name: test_devices[{('teslemetry', 'bcd-234')}]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': 'https://teslemetry.com/console',
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'teslemetry',
        'bcd-234',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Tesla',
    'model': 'Gen 3 Wall Connector',
    'model_id': None,
    'name': 'Wall Connector',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '234',
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': <ANY>,
  })
# ---
